[package]
name = "project-cleaner"
version = "1.0.0"
authors = ["Da4ndo <contact@da4ndo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
fs_extra = "1.3.0"
regex = "1.9.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
walkdir = "2.4.0"
