[package]
name = "project-cleaner"
version = "2.0.0"
authors = ["Da4ndo <contact@da4ndo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = "4.5.21"
colored = "2.0.4"
du = "0.1.1"
fs_extra = "1.3.0"
futures = "0.3.31"
humansize = "2.1.3"
inquire = "0.7.5"
num_cpus = "1.16.0"
regex = "1.9.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
shellexpand = "3.1.0"
tokio = { version = "1.32.0", features = ["full", "io-util"] }
walkdir = "2.4.0"
